# Game_ECE_World_Minigame

./: CMakeLists.txt  GCC_Command.txt  Game.c  Init.c  README.md  main.c
Code/: Game.c  Game.h  Include.h  main.c
Code/Games/: GameExemple.c  GameExemple.h
Code/Games/DarkPiano/: DarkPiano.c  DarkPiano.h
Code/Games/Exemple/: GameExemple.c  GameExemple.h  Geo.c
Code/Games/FlappyBird/: FB.c  FB.h
Code/Games/Geometrie_dash/: Geometrie_dash.c  Geometrie_dash.h
Code/Games/GeometryDash/: GeometryDash.c  GeometryDash.h
Code/Games/HeadJedai/: JeuBonus.c  JeuBonus.h
Code/Games/JeuBonus/: JeuBonus.c  JeuBonus.h
Code/Games/PecheAuCanards/: PAC.c  PAC.h
Code/Games/Snake/: Snake.c  Snake.h
Code/Games/TestMap/: Map.c  Map.h
Code/Games/TirAuBallon/: GameExemple.c  GameExemple.h
Code/Games/Traverse_de_la_riviere/: Traverse_code.c  Traverse_code.h
Code/Menu/: Menu.c  Menu.h
Code/Utils/: Magical.c  Magical.h  UI.c  UI.h  Vector.c  Vector.h  allegroutils.c  allegroutils.h
Textures/Map/: sauvegarde.txt
Utils/: allegroutils.c
marp-projet-info/: presentation.md
